enable hardened runtime

--- a/package.json
+++ b/package.json
@@ -114,7 +114,10 @@
     },
     "mac": {
       "category": "public.app-category.social-networking",
-      "darkModeSupport": true
+      "darkModeSupport": true,
+      "hardenedRuntime": true,
+      "entitlements": "build/entitlements.mac.plist",
+      "entitlementsInherit": "build/entitlements.mac.plist"
     },
     "win": {
       "target": {
