--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@typescript-eslint/parser": "^4.17.0",
     "asar": "^2.0.1",
     "chokidar": "^3.5.2",
-    "electron": "12.0.11",
+    "electron": "13.1.7",
     "electron-builder": "22.11.4",
     "electron-builder-squirrel-windows": "22.11.4",
     "electron-devtools-installer": "^3.1.1",
@@ -78,12 +78,12 @@
     "typescript": "^4.1.3"
   },
   "hakDependencies": {
-    "matrix-seshat": "^2.2.3",
+    "matrix-seshat": "^2.3.0",
     "keytar": "^5.6.0"
   },
   "build": {
     "appId": "chat.schildi.desktop",
-    "electronVersion": "12.0.14",
+    "electronVersion": "13.1.7",
     "files": [
       "package.json",
       {
@@ -108,19 +108,38 @@
       }
     },
     "deb": {
-      "depends": ["libgtk-3-0", "libnotify4", "libnss3", "libxss1", "libxtst6", "xdg-utils", "libatspi2.0-0", "libuuid1", "libsecret-1-0", "libsqlcipher0"],
+      "depends": [
+        "libgtk-3-0",
+        "libnotify4",
+        "libnss3",
+        "libxss1",
+        "libxtst6",
+        "xdg-utils",
+        "libatspi2.0-0",
+        "libuuid1",
+        "libsecret-1-0",
+        "libsqlcipher0"
+      ],
       "packageCategory": "net",
       "priority": "extra"
     },
     "mac": {
       "category": "public.app-category.social-networking",
       "darkModeSupport": true,
-      "hardenedRuntime": false,
+      "hardenedRuntime": true,
       "extendInfo": {
         "ITSAppUsesNonExemptEncryption": true
       },
       "entitlements": "build/entitlements.mac.plist",
-      "entitlementsInherit": "build/entitlements.mac.plist"
+      "entitlementsInherit": "build/entitlements.mac.inherit.plist"
+    },
+    "mas": {
+      "entitlements": "build/entitlements.mas.plist",
+      "entitlementsInherit": "build/entitlements.mas.inherit.plist",
+      "entitlementsLoginHelper":  "build/entitlements.mas.loginhelper.plist",
+      "provisioningProfile": "build/schildi_dev.provisionprofile",
+      "type": "development",
+      "hardenedRuntime": true
     },
     "win": {
       "target": {
