--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "build": {
     "appId": "chat.schildi.desktop",
+    "electronVersion": "13.5.2",
     "files": [
       "package.json",
       {
