--- a/package.json
+++ b/package.json
@@ -147,6 +147,12 @@
         "schemes": [
           "element"
         ]
+      },
+      {
+        "name": "schildichat",
+        "schemes": [
+          "schildichat"
+        ]
       }
     ],
     "deb": {
