--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "schildichat-desktop",
   "productName": "SchildiChat",
   "main": "lib/electron-main.js",
-  "version": "1.11.36-sc.0.test.2",
+  "version": "1.11.36-sc.1",
   "description": "A Matrix Client based on Element with a more traditional instant messaging experience",
   "author": "SchildiChat",
   "homepage": "https://schildi.chat/",
