--- a/package.json
+++ b/package.json
@@ -1,129 +1,129 @@
 {
-    "name": "schildichat-desktop-alpha",
-    "productName": "SchildiChatAlpha",
-    "main": "lib/electron-main.js",
-    "version": "1.11.82",
-    "description": "A Matrix Client based on Element with some changes and tweaks",
-    "author": "SchildiChat",
-    "homepage": "https://schildi.chat/",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/SchildiChat/schildichat-desktop"
-    },
-    "license": "AGPL-3.0-only OR GPL-3.0-only",
-    "files": [],
-    "engines": {
-        "node": ">=18.0.0"
-    },
-    "scripts": {
-        "i18n": "matrix-gen-i18n && yarn i18n:sort && yarn i18n:lint",
-        "i18n:sort": "jq --sort-keys '.' src/i18n/strings/en_EN.json > src/i18n/strings/en_EN.json.tmp && mv src/i18n/strings/en_EN.json.tmp src/i18n/strings/en_EN.json",
-        "i18n:lint": "prettier --log-level=silent    --write src/i18n/strings/ --ignore-path /dev/null",
-        "i18n:diff": "cp src/i18n/strings/en_EN.json src/i18n/strings/en_EN_orig.json && yarn i18n && matrix-compare-i18n-files src/i18n/strings/en_EN_orig.json src/i18n/strings/en_EN.json",
-        "mkdirs": "mkdirp packages deploys",
-        "fetch": "yarn run mkdirs && ts-node scripts/fetch-package.ts",
-        "asar-webapp": "asar p webapp webapp.asar",
-        "start": "yarn run build:ts && yarn run build:res && electron .",
-        "lint": "yarn lint:types && yarn lint:js && yarn lint:workflows",
-        "lint:js": "yarn lint:js:src && yarn lint:js:test && yarn lint:js:scripts && yarn lint:js:hak && prettier --check .",
-        "lint:js:src": "eslint --max-warnings 0 src",
-        "lint:js:test": "eslint --max-warnings 0 --config .eslintrc-test.js playwright",
-        "lint:js:scripts": "eslint --max-warnings 0 --config .eslintrc-scripts.js scripts",
-        "lint:js:hak": "eslint --max-warnings 0 --config .eslintrc-hak.js hak",
-        "lint:js-fix": "yarn lint:js-fix:src &&yarn lint:js-fix:test && yarn lint:js-fix:scripts && yarn lint:js-fix:hak && prettier --log-level=warn --write .",
-        "lint:js-fix:src": "eslint --fix --max-warnings 0 src",
-        "lint:js-fix:test": "eslint --fix --max-warnings 0 --config .eslintrc-test.js playwright",
-        "lint:js-fix:scripts": "eslint --fix --max-warnings 0 --config .eslintrc-scripts.js scripts",
-        "lint:js-fix:hak": "eslint --fix --max-warnings 0 --config .eslintrc-hak.js hak",
-        "lint:types": "yarn lint:types:src && yarn lint:types:test && yarn lint:types:scripts && yarn lint:types:hak",
-        "lint:types:src": "tsc --noEmit",
-        "lint:types:test": "tsc --noEmit -p playwright/tsconfig.json",
-        "lint:types:scripts": "tsc --noEmit -p scripts/tsconfig.json",
-        "lint:types:hak": "tsc --noEmit -p hak/tsconfig.json",
-        "lint:workflows": "find .github/workflows -type f \\( -iname '*.yaml' -o -iname '*.yml' \\) | xargs -I {} sh -c 'echo \"Linting {}\"; action-validator \"{}\"'",
-        "lint:knip": "knip",
-        "build:native": "yarn run hak",
-        "build:native:universal": "yarn run hak --target x86_64-apple-darwin fetchandbuild && yarn run hak --target aarch64-apple-darwin fetchandbuild && yarn run hak --target x86_64-apple-darwin --target aarch64-apple-darwin copyandlink",
-        "build:32": "yarn run build:ts && yarn run build:res && electron-builder --ia32",
-        "build:64": "yarn run build:ts && yarn run build:res && electron-builder --x64",
-        "build:universal": "yarn run build:ts && yarn run build:res && electron-builder --universal",
-        "build": "yarn run build:ts && yarn run build:res && electron-builder",
-        "build:ts": "tsc",
-        "build:res": "ts-node scripts/copy-res.ts",
-        "docker:setup": "docker build --platform linux/amd64 -t element-desktop-dockerbuild dockerbuild",
-        "docker:build:native": "scripts/in-docker.sh yarn run hak",
-        "docker:build": "scripts/in-docker.sh yarn run build",
-        "docker:install": "scripts/in-docker.sh yarn install",
-        "clean": "rimraf webapp.asar dist packages deploys lib",
-        "hak": "ts-node scripts/hak/index.ts",
-        "test": "playwright test",
-        "test:open": "yarn test --ui",
-        "test:screenshots:build": "docker build playwright -t element-desktop-playwright --platform linux/amd64",
-        "test:screenshots:run": "docker run --rm --network host -v $(pwd):/work/element-desktop -v /var/run/docker.sock:/var/run/docker.sock --platform linux/amd64 -it element-desktop-playwright"
-    },
-    "dependencies": {
-        "@sentry/electron": "^5.0.0",
-        "auto-launch": "^5.0.5",
-        "counterpart": "^0.18.6",
-        "electron-clear-data": "^1.0.5",
-        "electron-store": "^8.0.2",
-        "electron-window-state": "^5.0.3",
-        "matrix-seshat": "^4.0.0",
-        "minimist": "^1.2.6",
-        "node-fetch": "^2",
-        "png-to-ico": "^2.1.1",
-        "uuid": "^10.0.0"
-    },
-    "devDependencies": {
-        "@action-validator/cli": "^0.6.0",
-        "@action-validator/core": "^0.6.0",
-        "@babel/core": "^7.18.10",
-        "@babel/preset-env": "^7.18.10",
-        "@babel/preset-typescript": "^7.18.6",
-        "@electron/asar": "^3.2.3",
-        "@electron/fuses": "^1.7.0",
-        "@mapbox/node-pre-gyp": "^1.0.11",
-        "@playwright/test": "1.47.1",
-        "@types/auto-launch": "^5.0.1",
-        "@types/counterpart": "^0.18.1",
-        "@types/minimist": "^1.2.1",
-        "@types/node": "18.19.54",
-        "@types/pacote": "^11.1.1",
-        "@types/tar": "^6.1.3",
-        "@types/uuid": "^10.0.0",
-        "@types/yargs": "^17.0.32",
-        "@typescript-eslint/eslint-plugin": "^7.0.0",
-        "@typescript-eslint/parser": "^7.0.0",
-        "app-builder-lib": "24.13.3",
-        "chokidar": "^4.0.0",
-        "detect-libc": "^2.0.0",
-        "electron": "^32.0.0",
-        "electron-builder": "24.13.3",
-        "electron-builder-squirrel-windows": "24.13.3",
-        "electron-devtools-installer": "^3.2.0",
-        "eslint": "^8.26.0",
-        "eslint-config-google": "^0.14.0",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-matrix-org": "^1.0.0",
-        "eslint-plugin-unicorn": "^55.0.0",
-        "glob": "^11.0.0",
-        "knip": "^5.0.0",
-        "matrix-web-i18n": "^3.2.1",
-        "mkdirp": "^3.0.0",
-        "pacote": "^19.0.0",
-        "prettier": "^3.0.0",
-        "rimraf": "^6.0.0",
-        "tar": "^6.2.1",
-        "ts-node": "^10.9.1",
-        "typescript": "5.5.4"
-    },
-    "hakDependencies": {
-        "matrix-seshat": "^4.0.0",
-        "keytar": "^7.9.0"
-    },
-    "resolutions": {
-        "@types/node": "18.19.54",
-        "config-file-ts": "0.2.8-rc1"
-    }
+  "name": "schildichat-desktop-alpha",
+  "productName": "SchildiChatAlpha",
+  "main": "lib/electron-main.js",
+  "version": "1.11.82-sc.0.test.0",
+  "description": "A Matrix Client based on Element with some changes and tweaks",
+  "author": "SchildiChat",
+  "homepage": "https://schildi.chat/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SchildiChat/schildichat-desktop"
+  },
+  "license": "AGPL-3.0-only OR GPL-3.0-only",
+  "files": [],
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "scripts": {
+    "i18n": "matrix-gen-i18n && yarn i18n:sort && yarn i18n:lint",
+    "i18n:sort": "jq --sort-keys '.' src/i18n/strings/en_EN.json > src/i18n/strings/en_EN.json.tmp && mv src/i18n/strings/en_EN.json.tmp src/i18n/strings/en_EN.json",
+    "i18n:lint": "prettier --log-level=silent    --write src/i18n/strings/ --ignore-path /dev/null",
+    "i18n:diff": "cp src/i18n/strings/en_EN.json src/i18n/strings/en_EN_orig.json && yarn i18n && matrix-compare-i18n-files src/i18n/strings/en_EN_orig.json src/i18n/strings/en_EN.json",
+    "mkdirs": "mkdirp packages deploys",
+    "fetch": "yarn run mkdirs && ts-node scripts/fetch-package.ts",
+    "asar-webapp": "asar p webapp webapp.asar",
+    "start": "yarn run build:ts && yarn run build:res && electron .",
+    "lint": "yarn lint:types && yarn lint:js && yarn lint:workflows",
+    "lint:js": "yarn lint:js:src && yarn lint:js:test && yarn lint:js:scripts && yarn lint:js:hak && prettier --check .",
+    "lint:js:src": "eslint --max-warnings 0 src",
+    "lint:js:test": "eslint --max-warnings 0 --config .eslintrc-test.js playwright",
+    "lint:js:scripts": "eslint --max-warnings 0 --config .eslintrc-scripts.js scripts",
+    "lint:js:hak": "eslint --max-warnings 0 --config .eslintrc-hak.js hak",
+    "lint:js-fix": "yarn lint:js-fix:src &&yarn lint:js-fix:test && yarn lint:js-fix:scripts && yarn lint:js-fix:hak && prettier --log-level=warn --write .",
+    "lint:js-fix:src": "eslint --fix --max-warnings 0 src",
+    "lint:js-fix:test": "eslint --fix --max-warnings 0 --config .eslintrc-test.js playwright",
+    "lint:js-fix:scripts": "eslint --fix --max-warnings 0 --config .eslintrc-scripts.js scripts",
+    "lint:js-fix:hak": "eslint --fix --max-warnings 0 --config .eslintrc-hak.js hak",
+    "lint:types": "yarn lint:types:src && yarn lint:types:test && yarn lint:types:scripts && yarn lint:types:hak",
+    "lint:types:src": "tsc --noEmit",
+    "lint:types:test": "tsc --noEmit -p playwright/tsconfig.json",
+    "lint:types:scripts": "tsc --noEmit -p scripts/tsconfig.json",
+    "lint:types:hak": "tsc --noEmit -p hak/tsconfig.json",
+    "lint:workflows": "find .github/workflows -type f \\( -iname '*.yaml' -o -iname '*.yml' \\) | xargs -I {} sh -c 'echo \"Linting {}\"; action-validator \"{}\"'",
+    "lint:knip": "knip",
+    "build:native": "yarn run hak",
+    "build:native:universal": "yarn run hak --target x86_64-apple-darwin fetchandbuild && yarn run hak --target aarch64-apple-darwin fetchandbuild && yarn run hak --target x86_64-apple-darwin --target aarch64-apple-darwin copyandlink",
+    "build:32": "yarn run build:ts && yarn run build:res && electron-builder --ia32",
+    "build:64": "yarn run build:ts && yarn run build:res && electron-builder --x64",
+    "build:universal": "yarn run build:ts && yarn run build:res && electron-builder --universal",
+    "build": "yarn run build:ts && yarn run build:res && electron-builder",
+    "build:ts": "tsc",
+    "build:res": "ts-node scripts/copy-res.ts",
+    "docker:setup": "docker build --platform linux/amd64 -t element-desktop-dockerbuild dockerbuild",
+    "docker:build:native": "scripts/in-docker.sh yarn run hak",
+    "docker:build": "scripts/in-docker.sh yarn run build",
+    "docker:install": "scripts/in-docker.sh yarn install",
+    "clean": "rimraf webapp.asar dist packages deploys lib",
+    "hak": "ts-node scripts/hak/index.ts",
+    "test": "playwright test",
+    "test:open": "yarn test --ui",
+    "test:screenshots:build": "docker build playwright -t element-desktop-playwright --platform linux/amd64",
+    "test:screenshots:run": "docker run --rm --network host -v $(pwd):/work/element-desktop -v /var/run/docker.sock:/var/run/docker.sock --platform linux/amd64 -it element-desktop-playwright"
+  },
+  "dependencies": {
+    "@sentry/electron": "^5.0.0",
+    "auto-launch": "^5.0.5",
+    "counterpart": "^0.18.6",
+    "electron-clear-data": "^1.0.5",
+    "electron-store": "^8.0.2",
+    "electron-window-state": "^5.0.3",
+    "matrix-seshat": "^4.0.0",
+    "minimist": "^1.2.6",
+    "node-fetch": "^2",
+    "png-to-ico": "^2.1.1",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@action-validator/cli": "^0.6.0",
+    "@action-validator/core": "^0.6.0",
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
+    "@electron/asar": "^3.2.3",
+    "@electron/fuses": "^1.7.0",
+    "@mapbox/node-pre-gyp": "^1.0.11",
+    "@playwright/test": "1.47.1",
+    "@types/auto-launch": "^5.0.1",
+    "@types/counterpart": "^0.18.1",
+    "@types/minimist": "^1.2.1",
+    "@types/node": "18.19.54",
+    "@types/pacote": "^11.1.1",
+    "@types/tar": "^6.1.3",
+    "@types/uuid": "^10.0.0",
+    "@types/yargs": "^17.0.32",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "app-builder-lib": "24.13.3",
+    "chokidar": "^4.0.0",
+    "detect-libc": "^2.0.0",
+    "electron": "^32.0.0",
+    "electron-builder": "24.13.3",
+    "electron-builder-squirrel-windows": "24.13.3",
+    "electron-devtools-installer": "^3.2.0",
+    "eslint": "^8.26.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-matrix-org": "^1.0.0",
+    "eslint-plugin-unicorn": "^55.0.0",
+    "glob": "^11.0.0",
+    "knip": "^5.0.0",
+    "matrix-web-i18n": "^3.2.1",
+    "mkdirp": "^3.0.0",
+    "pacote": "^19.0.0",
+    "prettier": "^3.0.0",
+    "rimraf": "^6.0.0",
+    "tar": "^6.2.1",
+    "ts-node": "^10.9.1",
+    "typescript": "5.5.4"
+  },
+  "hakDependencies": {
+    "matrix-seshat": "^4.0.0",
+    "keytar": "^7.9.0"
+  },
+  "resolutions": {
+    "@types/node": "18.19.54",
+    "config-file-ts": "0.2.8-rc1"
+  }
 }
